# redstork

./: .dockerignore  .gitignore  .travis.yml  BUILD.gn  DEBUG.md  DEPS  LICENSE  Makefile  NOTES.md  README.md  appveyor.yml  pdfium_red.cc  red.py  setup.py
.github/workflows/: build.yaml
build_scripts/: build.bat  build.sh  build_wheel.sh  prepare.sh  rebuild.sh
docker/: Dockerfile  Dockerfile-debug  Dockerfile.debug  Makefile  main  main.c
docs/: Makefile
docs/source/: conf.py  index.rst  reference.rst  tutorial.rst
patches/: BUILD.gn.diff  gcc_solink_wrapper.py.diff  rc_compiler.patch  resources.rc  shared_library.patch
red/: __init__.py  bindings.py  document.py  font.py  page.py  pageobject.py
redstork/: __init__.py  bindings.py  dict_changed.py  document.py  font.py  glyph.py  memoize.py  page.py  pageobject.py  pdfium_version.txt  requirements.txt  so.py  unicode_map.py
redstork/test/: __init__.py  test_dict_changed.py  test_document.py  test_font.py  test_glyph.py  test_page.py  test_text.py  test_textobject.py  test_unicode_map.py
samples/: sample.py  ui.py
src/: args.Release.gn  args.darwin.Debug.gn  args.darwin.Release.gn  args.linux.Debug.gn  args.windows.Release.gn  redstork.cc  redstork.h  redstork_version.h
steps/: 00-env.sh  01-install.sh  02-checkout.sh  03-patch.sh  04-install-extra.sh  05-configure.sh  06-build.sh  07-stage.sh  08-wheel.sh
