# Copyright 2014 PDFium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/config/sanitizers/sanitizers.gni")
import("../pdfium.gni")

shared_library("pdfium_red") {
  include_dirs = [ "..", "../third_party/freetype/src/include" ]
  sources = [
    "pdfium_red.cc",
  ]
  defines = [
    "PNG_PREFIX",
    "PNG_USE_READ_MACROS",
  ]

  # Note: One should write programs that depend on ../:pdfium. Whereas this
  # sample program does not set a good example, and depends on PDFium internals,
  # as well as test support code, for convenience.
  deps = [
    "//:pdfium_public_headers",
    "//fpdfsdk",
  ]
}
