# Copyright 2014 PDFium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/config/sanitizers/sanitizers.gni")
import("../pdfium.gni")

source_set("redstork") {
  include_dirs = [ "..", "../third_party/freetype/src/include", "../third_party/abseil-cpp" ]
  sources = [
    "src/redstork.cc",
    "src/redstork.h",
    "src/redstork_version.h",
  ]
  defines = [
    "PNG_PREFIX",
    "PNG_USE_READ_MACROS",
    "FPDF_IMPLEMENTATION",
  ]
}

