# Build arguments go here.
# See "gn args <out_dir> --list" for available build arguments.
use_goma = false
is_debug = false

pdf_use_skia = false
pdf_use_skia_paths = false
pdf_enable_xfa = false
pdf_enable_v8 = false
is_component_build = false

clang_use_chrome_plugins = false

pdf_use_win32_gdi = true
